# hackai-techfest

./: README.md  pyproject.toml  requirements.txt
src/: .env  app.py  main.py
src/agents/: monitoringServer.py  user.py
src/messages/: messageModels.py
