[tool.poetry]
name = "weatheragents"
version = "0.1.0"
description = "Project made for TechFest 2023 under HackAI"
authors = ["mehulambastha <mehul.213amb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
